Punto de control, filtro por nombre OK

--- a/src/app/modules/users/components/users-table/users-table.component.html
+++ b/src/app/modules/users/components/users-table/users-table.component.html
@@ -1,4 +1,5 @@
 <!-- <p>users-table works!</p> -->
+<input type="search" [formControl]="inputFilter">
 <table cdk-table [dataSource]="dataSource">
   <!-- Position Column -->
   <ng-container cdkColumnDef="id">
