--- a/src/app/modules/users/components/users-table/users-table.component.html
+++ b/src/app/modules/users/components/users-table/users-table.component.html
@@ -1,39 +1,41 @@
 <!-- <p>users-table works!</p> -->
-<input type="search" [formControl]="inputFilter">
-<table cdk-table [dataSource]="dataSource">
+
+<div class="filter">
+  <input type="search" [formControl]="inputFilter">
+</div>
+<table class="sheru-cp-section table" cdk-table [dataSource]="dataSource" >
   <!-- Position Column -->
   <ng-container cdkColumnDef="id">
-    <th cdk-header-cell *cdkHeaderCellDef>Id.</th>
-    <td cdk-cell *cdkCellDef="let element">{{ element.id }}</td>
+    <th class="table__cell table__cell--head"  scope="row" cdk-header-cell *cdkHeaderCellDef>Id.</th>
+    <td class="table__cell"  cdk-cell *cdkCellDef="let element">{{ element.id }}</td>
   </ng-container>
 
   <!-- Name Column -->
   <ng-container cdkColumnDef="name">
-    <th cdk-header-cell *cdkHeaderCellDef>Name</th>
-    <td cdk-cell *cdkCellDef="let element">{{ element.name }}</td>
+    <th class="table__cell table__cell--head"  scope="row" cdk-header-cell *cdkHeaderCellDef>Name</th>
+    <td class="table__cell"  cdk-cell *cdkCellDef="let element">{{ element.name }}</td>
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container cdkColumnDef="email">
-    <th cdk-header-cell *cdkHeaderCellDef>Weight</th>
-    <td cdk-cell *cdkCellDef="let element">{{ element.email }}</td>
+    <th class="table__cell table__cell--head"  scope="row" cdk-header-cell *cdkHeaderCellDef>Email</th>
+    <td class="table__cell"  cdk-cell *cdkCellDef="let element">{{ element.email }}</td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container cdkColumnDef="phone">
-    <th cdk-header-cell *cdkHeaderCellDef>Phone</th>
-    <td cdk-cell *cdkCellDef="let element">{{ element.phone }}</td>
+    <th class="table__cell table__cell--head"  scope="row" cdk-header-cell *cdkHeaderCellDef>Phone</th>
+    <td class="table__cell"  cdk-cell *cdkCellDef="let element">{{ element.phone }}</td>
   </ng-container>
 
   <!-- Actions Column -->
   <ng-container cdkColumnDef="actions">
-    <th cdk-header-cell class="py-3 px-6" *cdkHeaderCellDef>Actions</th>
-    <td cdk-cell class="py-4 px-6" *cdkCellDef="let row">
+    <th class="table__cell table__cell--head"  scope="row" cdk-header-cell  *cdkHeaderCellDef>Actions</th>
+    <td class="table__cell"  cdk-cell class="py-4 px-6" *cdkCellDef="let row">
       <button [routerLink]="['../detail/', row.id]">Ver detalle</button>
     </td>
-    <td cdk-footer-cell class="py-3 px-6" *cdkFooterCellDef></td>
   </ng-container>
 
-  <tr cdk-header-row *cdkHeaderRowDef="displayedColumns"></tr>
-  <tr cdk-row *cdkRowDef="let row; columns: displayedColumns"></tr>
+  <tr class="table__row" cdk-header-row *cdkHeaderRowDef="displayedColumns"></tr>
+  <tr class="table__row" cdk-row *cdkRowDef="let row; columns: displayedColumns"></tr>
 </table>
