Arreglos finales en los estilos

--- a/src/app/modules/users/components/user/user.component.scss
+++ b/src/app/modules/users/components/user/user.component.scss
@@ -14,6 +14,8 @@
   /* Card color */
   --bg-card: #fafafa;
   --bg-card-hover: #dadada;
+    $screen-desktop: 950px;
+    $screen-tablet: 750px;
 }
 .user {
   position: relative;
@@ -31,4 +33,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media screen and (min-width: 950px) {
+  .user{
+    margin: auto;
+    width: 40%;
+  }
 }
