--- a/src/app/modules/users/components/users-table/users-table.component.html
+++ b/src/app/modules/users/components/users-table/users-table.component.html
@@ -1,7 +1,7 @@
 <!-- <p>users-table works!</p> -->
 
 <div class="filter">
-  <input type="search" [formControl]="inputFilter">
+  <input type="search" [formControl]="inputFilter" placeholder="Find...">
 </div>
 <table class="sheru-cp-section table" cdk-table [dataSource]="dataSource" >
   <!-- Position Column -->
